sterling-oms-eks-templates/scripts/service.yaml
# Update service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oms-smcfs-svc
  namespace: oms
spec:
  type: LoadBalancer
  selector:
    appname: smcfs
    role: appserver
  ports:
    - name: https
      port: 9443
      protocol: TCP
      targetPort: https
    - name: http
      port: 9080
      protocol: TCP
      targetPort: http
